# cb_amc_comercial

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  EVALS.md  README.md  docker-compose.vps.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  spec.md
.github/workflows/: ci.yml
app/: config.py  logging_config.py  main.py
app/agent/: orchestrator.py  tools.py
app/agent/prompts/: system_prompt.md
app/auth/: session.py
app/data/: catalogo.py  db.py  models.py  repository.py  seed.py
app/ops/: escalation.py
app/report/: pdf.py  resumo_pedidos.py
app/voice/: fala.py  stt.py  tts.py
app/whatsapp/: client.py  factory.py  router.py
docs/: chatbot_estudo.md
docs/adr/: 0001-check-em-enums.md  0002-copia-visual-listas.md  0003-relatorio-pdf-cloud-api.md
scripts/: cadastrar_demo.py  capture_colcci.py
tests/: conftest.py  test_auth.py  test_cadastrar_demo.py  test_cadastrar_demo_postgres.py  test_catalogo.py  test_config.py  test_escalation.py  test_fala.py  test_idor_postgres.py  test_logging.py  test_main.py  test_models_fiscais.py  test_orchestrator.py  test_repository.py  test_resumo_pedidos.py  test_seed.py  test_tools.py  test_voice.py  test_whatsapp.py
tests/evals/: _espia.py  conftest.py  test_evals.py
tests/fixtures/: colcci_products.json  whatsapp_cloud_webhook_sample.json
