[project]
name = "cb-amc-comercial"
version = "0.1.0"
description = "Chatbot de atendimento comercial B2B da AMC Têxtil (WhatsApp, NLP, voz)."
requires-python = ">=3.12"

# Dependências reais ficam em requirements.txt / requirements-dev.txt (pinadas).
# Este bloco existe só para metadados e config das ferramentas abaixo.

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests", "scripts"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear.
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Template HTML/CSS embutido: linhas longas de CSS são intencionais (design reusado do
# chatbot_sheet_talk) e não dá para quebrar com noqa dentro de string literal.
"app/report/resumo_pedidos.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# -m "not eval": o CI e o `pytest` normal NUNCA rodam as evals (batem na Claude API,
# têm custo e são não-determinísticas). Rodar evals sob demanda: `pytest -m eval`.
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=70 -m \"not eval\""
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "postgres: testes de IDOR em Postgres real (testcontainers; exigem Docker)",
    "eval: evals de comportamento contra a Claude API REAL (custo; fora do CI)",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.bandit]
exclude_dirs = ["tests"]
